# Genesis

./: .gitignore  .zenodo.json  CITATION.cff  COLLAPSE_DEFINITION.md  COLLAPSE_HUNTER.md  Cargo.toml  IP_RECORD.md  README.md  REPLICATION_LEADERBOARD.md  SOP-1.md  WHITEPAPER.md  build_errors.txt  genesis-protocol.code-workspace  replication_status.json
anchor/: epoch_100.json  epoch_200.json  epoch_300.json  epoch_400.json
crates/gateway/: Cargo.toml
crates/gateway/examples/: simulate.rs
crates/gateway/src/: control.html  dashboard.html  lib.rs  moltbot.rs  runtime.rs  server.rs  shield.rs  stress.rs  world.rs
crates/gateway/tests/: load_sim.rs
crates/genesis-anchor/: Cargo.toml
crates/genesis-anchor/src/: anchor.rs  chain.rs  errors.rs  lib.rs  merkle.rs
crates/genesis-econometrics/: Cargo.toml
crates/genesis-econometrics/src/: analytics.rs  errors.rs  lib.rs
crates/genesis-experiment/: Cargo.toml
crates/genesis-experiment/anchor/: epoch_100.json  epoch_200.json  epoch_300.json  epoch_400.json
crates/genesis-experiment/src/: config.rs  flagship.rs  lib.rs  manifest.rs  report.rs  runner.rs  stats.rs
crates/genesis-federation/: Cargo.toml
crates/genesis-homeostasis/: Cargo.toml
crates/genesis-homeostasis/src/: errors.rs  immune.rs  lib.rs
crates/genesis-replay/: Cargo.toml
crates/genesis-replay/src/: engine.rs  errors.rs  lib.rs  report.rs  trajectory.rs
deliverables/: 00_README_REPRODUCE_v3.md
deliverables/genesis-experiment-pack-v2/: 01_SRAVAN_EXECUTIVE_BRIEF.md
deliverables/genesis-experiment-pack-v3/: 01_SRAVAN_EXECUTIVE_BRIEF.md
docs/: book.html  dashboard.html  genesis-protocol-paper.html  index.html  paper.html  script.js  status-snapshot.json  style.css  system-state.json
docs/narration/: andrew_scripts.md
experimental-design/: README.md  collapse-definition-rationale.md  methodology.md  parameter-rationale.md
experiments/basal_inversion/: basal_inversion_data.csv  basal_inversion_manifest.json  basal_inversion_report.txt
experiments/catastrophe_resilience/: catastrophe_resilience_data.csv  catastrophe_resilience_manifest.json  catastrophe_resilience_report.txt
experiments/dual_inversion/: dual_inversion_data.csv  dual_inversion_manifest.json  dual_inversion_report.txt
experiments/entropy_sweep/: entropy_sweep_data.csv  entropy_sweep_manifest.json  entropy_sweep_report.txt
experiments/evolution_forbidden/: evolution_forbidden_data.csv  evolution_forbidden_manifest.json  evolution_forbidden_report.txt
experiments/fth_reserve_moderate/: fth_reserve_moderate_report.txt
experiments/fth_reserve_stressed/: fth_reserve_stressed_data.csv  fth_reserve_stressed_manifest.json  fth_reserve_stressed_report.txt
experiments/inequality_threshold/: inequality_threshold_data.csv  inequality_threshold_manifest.json  inequality_threshold_report.txt
experiments/reserve_calm/: reserve_calm_data.csv  reserve_calm_manifest.json  reserve_calm_report.txt
experiments/reserve_crisis/: reserve_crisis_data.csv  reserve_crisis_manifest.json  reserve_crisis_report.txt
experiments/reserve_moderate/: reserve_moderate_data.csv  reserve_moderate_manifest.json  reserve_moderate_report.txt
experiments/reserve_stressed/: reserve_stressed_data.csv  reserve_stressed_manifest.json  reserve_stressed_report.txt
experiments/resilience_q1_both/: resilience_q1_both_data.csv  resilience_q1_both_manifest.json  resilience_q1_both_report.txt
experiments/resilience_q2_immune_only/: resilience_q2_immune_only_data.csv  resilience_q2_immune_only_manifest.json  resilience_q2_immune_only_report.txt
experiments/resilience_q3_genetic_only/: resilience_q3_genetic_only_data.csv  resilience_q3_genetic_only_manifest.json  resilience_q3_genetic_only_report.txt
experiments/resilience_q4_static/: resilience_q4_static_data.csv  resilience_q4_static_manifest.json  resilience_q4_static_report.txt
experiments/resource_depletion_abundant/: resource_depletion_abundant_data.csv  resource_depletion_abundant_manifest.json  resource_depletion_abundant_report.txt
experiments/resource_depletion_constrained/: resource_depletion_constrained_data.csv  resource_depletion_constrained_manifest.json  resource_depletion_constrained_report.txt
lab-notebooks/: 001-system-design.md  002-season1-observations.md  003-season2-design.md  004-sensitivity-analysis.md  005-statistical-hardening.md  README.md
moltbook/: collapse_bounty.json  collapse_bounty.md  collapse_bounty_post.md  comment_templates.md  moltbook_post.ps1  paper_announcement_post.md  post1_entropy_sweep.json  post2_catastrophe_resilience.json  post3_inequality_threshold.json  post4_treasury_stability.json  post_6820_worlds_milestone.md  post_bounty_reset.md  post_genesis_v3_versioning.md  post_phase4_bridge.md  post_phase_transition.md  post_week2_evolution.json  replication_challenge.json
papers/: build-paper-pdf.js  genesis-protocol-III-the-experimental-method.md  genesis-protocol.html  genesis-protocol.md  genesis_protocol_landing.md  genesis_protocol_paper.md  known_failure_modes.md  package-lock.json  package.json  sravan-executive-brief.md  statistical_validation_report.md
papers/arxiv/: README.md  main.tex  references.bib
scripts/: bootstrap.sh  build_experiment_pack_v3.ps1  ignite.ps1  merkle.ps1  plot_phase_transition.py  push-snapshot.ps1  statistical_validation.py
src/: main.rs
tests/: long_run_validation.rs
(+93 files in other folders)
