[package]
name = "genesis-anchor"
version.workspace = true
edition.workspace = true

[dependencies]
genesis-dna.workspace = true
metabolism.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
