[package]
name = "genesis-econometrics"
version = "0.1.0"
edition = "2021"

[dependencies]
genesis-dna = { path = "../genesis-dna" }
metabolism = { path = "../metabolism" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
