[package]
name = "genesis-experiment"
version.workspace = true
edition.workspace = true
description = "Hypothesis-driven experiment engine for the Genesis Protocol multiverse"

[dependencies]
gateway.workspace = true
genesis-multiverse.workspace = true
genesis-anchor.workspace = true
genesis-homeostasis.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
uuid.workspace = true
chrono.workspace = true
rand.workspace = true
tracing.workspace = true
